--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Cyber-X WA BOT",
+  "name": "Ali- King",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/darkalphaxteam/Cyber-X-Beta-Release",
-  "logo": "https://telegra.ph/file/71c859102f3625d06204b.jpg",
+  "repository": "https://chat.whatsapp.com/IHc6Ga3pHWdDLQle2v7rx3",
+  "logo": "https://www.linkpicture.com/q/Screenshot_20221015-085620.png",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
